--- a/Practica 1CarGame/CarGame/CarGame/CarGame.vcxproj
+++ b/Practica 1CarGame/CarGame/CarGame/CarGame.vcxproj
@@ -11,25 +11,39 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CarGameCode\Control\Commands\AccCommand.cpp" />
+    <ClCompile Include="CarGameCode\Control\Commands\HelpCommand.cpp" />
+    <ClCompile Include="CarGameCode\Control\Commands\MoveCommand.cpp" />
+    <ClCompile Include="CarGameCode\Control\Commands\QuitCommand.cpp" />
     <ClCompile Include="CarGameCode\Control\ViewController.cpp" />
     <ClCompile Include="CarGameCode\Logic\Game.cpp" />
     <ClCompile Include="CarGameCode\Logic\GameObjectContainer.cpp" />
+    <ClCompile Include="CarGameCode\Logic\GameObjects\BadObject.cpp" />
     <ClCompile Include="CarGameCode\Logic\GameObjects\Car.cpp" />
     <ClCompile Include="CarGameCode\Logic\GameObjects\GameObject.cpp" />
     <ClCompile Include="CarGameCode\Logic\GameObjectGenerator.cpp" />
+    <ClCompile Include="CarGameCode\Logic\GameObjects\GoodObject.cpp" />
     <ClCompile Include="CarGameCode\Logic\GameObjects\PowerUp.cpp" />
     <ClCompile Include="CarGameCode\Logic\GameObjects\Wall.cpp" />
     <ClCompile Include="CarGameCode\Main.cpp" />
     <ClCompile Include="CarGameCode\View\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CarGameCode\Control\CommandFactory.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\AccCommand.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\Command.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\HelpCommand.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\MoveCommand.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\QuitCommand.h" />
     <ClInclude Include="CarGameCode\Control\ViewController.h" />
     <ClInclude Include="CarGameCode\Logic\Game.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjectContainer.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjectGenerator.h" />
+    <ClInclude Include="CarGameCode\Logic\GameObjects\BadObject.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\Car.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\Collider.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\GameObject.h" />
+    <ClInclude Include="CarGameCode\Logic\GameObjects\GoodObject.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\PowerUp.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\Wall.h" />
     <ClInclude Include="CarGameCode\Utils\Vector2D.h" />
