--- a/Practica 1CarGame/CarGame/CarGame/CarGame.vcxproj.filters
+++ b/Practica 1CarGame/CarGame/CarGame/CarGame.vcxproj.filters
@@ -41,6 +41,24 @@
     <ClCompile Include="CarGameCode\Logic\GameObjects\PowerUp.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="CarGameCode\Control\Commands\AccCommand.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="CarGameCode\Control\Commands\HelpCommand.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="CarGameCode\Control\Commands\MoveCommand.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="CarGameCode\Control\Commands\QuitCommand.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="CarGameCode\Logic\GameObjects\BadObject.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="CarGameCode\Logic\GameObjects\GoodObject.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CarGameCode\Logic\Game.h" />
@@ -59,5 +77,13 @@
     <ClInclude Include="CarGameCode\Logic\GameObjects\GameObject.h" />
     <ClInclude Include="CarGameCode\View\Infobar.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\PowerUp.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\AccCommand.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\Command.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\HelpCommand.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\MoveCommand.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\QuitCommand.h" />
+    <ClInclude Include="CarGameCode\Control\CommandFactory.h" />
+    <ClInclude Include="CarGameCode\Logic\GameObjects\BadObject.h" />
+    <ClInclude Include="CarGameCode\Logic\GameObjects\GoodObject.h" />
   </ItemGroup>
 </Project>
