--- a/Practica 1CarGame/CarGame/CarGame/CarGame.vcxproj
+++ b/Practica 1CarGame/CarGame/CarGame/CarGame.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="CarGameCode\Control\Commands\AccCommand.cpp" />
     <ClCompile Include="CarGameCode\Control\Commands\HelpCommand.cpp" />
     <ClCompile Include="CarGameCode\Control\Commands\MoveCommand.cpp" />
+    <ClCompile Include="CarGameCode\Control\Commands\NextCommand.cpp" />
     <ClCompile Include="CarGameCode\Control\Commands\QuitCommand.cpp" />
     <ClCompile Include="CarGameCode\Control\ViewController.cpp" />
     <ClCompile Include="CarGameCode\Logic\Game.cpp" />
@@ -26,6 +27,7 @@
     <ClCompile Include="CarGameCode\Logic\GameObjects\PowerUp.cpp" />
     <ClCompile Include="CarGameCode\Logic\GameObjects\Wall.cpp" />
     <ClCompile Include="CarGameCode\Main.cpp" />
+    <ClCompile Include="CarGameCode\View\Infobar.cpp" />
     <ClCompile Include="CarGameCode\View\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -34,6 +36,7 @@
     <ClInclude Include="CarGameCode\Control\Commands\Command.h" />
     <ClInclude Include="CarGameCode\Control\Commands\HelpCommand.h" />
     <ClInclude Include="CarGameCode\Control\Commands\MoveCommand.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\NextCommand.h" />
     <ClInclude Include="CarGameCode\Control\Commands\QuitCommand.h" />
     <ClInclude Include="CarGameCode\Control\ViewController.h" />
     <ClInclude Include="CarGameCode\Logic\Game.h" />
