--- a/Practica 1CarGame/CarGame/CarGame/CarGame.vcxproj.filters
+++ b/Practica 1CarGame/CarGame/CarGame/CarGame.vcxproj.filters
@@ -38,9 +38,6 @@
     <ClCompile Include="CarGameCode\Logic\GameObjectGenerator.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
-    <ClCompile Include="CarGameCode\Logic\GameObjects\PowerUp.cpp">
-      <Filter>Archivos de código fuente</Filter>
-    </ClCompile>
     <ClCompile Include="CarGameCode\Control\Commands\AccCommand.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
@@ -57,6 +54,15 @@
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
     <ClCompile Include="CarGameCode\Logic\GameObjects\GoodObject.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="CarGameCode\Control\Commands\NextCommand.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="CarGameCode\View\Infobar.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
+    <ClCompile Include="CarGameCode\Logic\GameObjects\PowerUp.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
   </ItemGroup>
@@ -76,7 +82,6 @@
     <ClInclude Include="CarGameCode\Logic\GameObjects\Collider.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\GameObject.h" />
     <ClInclude Include="CarGameCode\View\Infobar.h" />
-    <ClInclude Include="CarGameCode\Logic\GameObjects\PowerUp.h" />
     <ClInclude Include="CarGameCode\Control\Commands\AccCommand.h" />
     <ClInclude Include="CarGameCode\Control\Commands\Command.h" />
     <ClInclude Include="CarGameCode\Control\Commands\HelpCommand.h" />
@@ -85,5 +90,7 @@
     <ClInclude Include="CarGameCode\Control\CommandFactory.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\BadObject.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\GoodObject.h" />
+    <ClInclude Include="CarGameCode\Control\Commands\NextCommand.h" />
+    <ClInclude Include="CarGameCode\Logic\GameObjects\PowerUp.h" />
   </ItemGroup>
 </Project>
